# clipflow

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: focus-on-x11.md
src/: App.tsx  ToolEditor.tsx  api.ts  constants.ts  detect.ts  runTool.ts  styles.css  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  themes.rs  tools.rs  window.rs
src/components/: ClipList.tsx  ContentPreview.tsx  FolderBar.tsx  FolderSelect.tsx  Footer.tsx  HistoryDetail.tsx  Kbd.tsx  SaveForm.tsx  SavedDetail.tsx  SearchBar.tsx  SettingsView.tsx  Sidebar.tsx  TagInput.tsx  ToolsSidebar.tsx
src/hooks/: useClipboardData.ts  useGlobalKeydown.ts  useHideOnBlur.ts  useKeyboardNav.ts  useThemes.ts
src/lib/: color.ts  format.ts
